# openbridge

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  release.yml
config/: config.yaml
docker/: Dockerfile  docker-compose.yml
docs/: INSTALL.md
scripts/: install.sh
scripts/systemd/: openbridge.service
src/openbridge/: __init__.py  __main__.py  config.py  server.py
src/openbridge/adapters/: __init__.py  base.py  discord.py  registry.py  telegram.py
src/openbridge/apps/: __init__.py  base.py  generic.py  opencode.py  opencode_serve.py  terminal.py
src/openbridge/auth/: __init__.py  manager.py
src/openbridge/cli/: __init__.py  setup.py
src/openbridge/core/: __init__.py  engine.py  session.py
src/openbridge/messaging/: __init__.py  bus.py  router.py
src/openbridge/utils/: __init__.py  formatting.py
tests/: test_config.py  test_engine.py
