[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openbridge"
version = "0.1.0"
description = "Production-grade remote CLI bridge for mobile devices"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "OpenBridge Team"}
]
keywords = ["cli", "remote", "terminal", "telegram", "discord", "mobile"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Terminals",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-telegram-bot>=20.6",
    "discord.py>=2.3.0",
    "redis>=5.0.0",
    "pexpect>=4.8.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "cryptography>=41.0.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "questionary>=2.0.0",
    "websockets>=12.0",
    "aiofiles>=23.2.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
    "python-daemon>=3.0.0",
    "psutil>=5.9.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
openbridge = "openbridge.__main__:main"
ob = "openbridge.__main__:main"

[project.urls]
Homepage = "https://github.com/openbridge/openbridge"
Documentation = "https://docs.openbridge.dev"
Repository = "https://github.com/openbridge/openbridge"
Issues = "https://github.com/openbridge/openbridge/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
